# arikoto

./: .gitignore  CMakeLists.txt  README.md  limine.conf
.github/workflows/: codeql.yml
initrd/: hello.txt
initrd/test/: highvoltage.txt
kernel/: CMakeLists.txt  get-deps  linker.ld
kernel/include/: gdt.h  heap.h  isr.h  kernel.h  keyboard.h  memory.h  multitask.h  pit.h  print.h  request.h  serial.h  spinlock.h  string.h  vfs.h  vmm.h
kernel/include/arch/x86_64/: gdt.h  memory.h  pit.h  vmm.h
kernel/include/misc/: kernel.h  multitask.h  print.h  shell.h  string.h
kernel/include/vfs/: vfs.h
kernel/src/: gdt.c  heap.c  idt.c  initramfs.c  isr.c  keyboard.c  main.c  memory.c  multitask.c  panic.c  pic.c  pit.c  print.c  request.c  serial.c  shell.c  string.c  stub.asm  task_switch.asm  tests.c  vfs.c  vmm.c
kernel/src/arch/x86_64/: gdt.c  idt.c  isr.c  main.c  memory.c  pic.c  pit.c  request.c  stub.asm  task_switch.asm  vmm.c
kernel/src/misc/: heap.c  keyboard.c  logo.c  multitask.c  panic.c  print.c  serial.c  shell.c  string.c  tests.c
kernel/src/vfs/: initramfs.c  vfs.c
utils/: makeinitrd.py
